# c_course

./: .gitignore
c/: CMakeLists.txt  CMakePresets.json  bootstrap.py  test_intellisense.c  zig_toolchain.cmake
c/basics/: 01_basic_storage_types_and_words.c  02_expressions_and_operators.c  03_control_flow.c  04_functions_and_scope.c  05_pointers_arrays_and_dynamic_memory.c  06_structs_unions_enums_bitfields.c  07_multiple_files.c  CMakeLists.txt  header_use_example.c  header_use_example.h  unity_build_example.c
c/data_structures/: CMakeLists.txt  dynamic_array.c  hash_table.c  hash_table_helpers.c  linked_list.c  queue.c  stack.c
c/graphical_explanations_and_real_use_cases/: CMakeLists.txt
c/toolchain/: zig_ar.cmd  zig_ar.sh  zig_dlltool.cmd  zig_dlltool.sh  zig_ranlib.cmd  zig_ranlib.sh  zig_rc.cmd  zig_rc.sh
engine/: CMakeLists.txt
engine/common/: CMakeLists.txt
engine/common/data_structures/: ECS.h  vector.c
engine/data_structures/: ECS.h  vector.c  vector.h
engine/engine_src/: CMakeLists.txt  debug_main.c
